correciones de formato, agregacion de fotos, y nuevo carrusel

--- a/frontEnd/ISOQuality/ISOQuality/quienessomos.html
+++ b/frontEnd/ISOQuality/ISOQuality/quienessomos.html
@@ -83,7 +83,7 @@
             </div>
         </div>
 
-        <section class="px-4">
+        <section class="px-4 fade-in">
             <div class="row">
                 <div class="col-12">
                     <p class="display-4">
@@ -92,8 +92,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-7">
-                    <h2><small>Misión</small></h2>
+                <div class="col-md-12 col-lg-7">
+                    <h2><small><span class="font-weight-bold">Misión</span></small></h2>
                     <p class="lead text-justify">
                         ISO QUALITY es una empresa dedicada por más de 20 años al desarrollo de consultorías en el área
                         de la implementación de normas de calidad, medio ambiente y seguridad y a la formulación de
@@ -107,12 +107,13 @@
 
                     </p>
                 </div>
+                <div class="col-md-12 col-lg-5 pt-md-3">
                 <div id="tarjetasDaniel" class="card">
                     <div class="card_landing" style="--i:url(img/daniel.jpg)">
                     </div>
                     <div id="tarjetasDaniel" class="card_info">
                         <div id="tarjetasDaniel" class="content">
-                            <div class="col-md-8">
+                            <div class="col-md px-md-2">
 
                                 <h3>Daniel Saldías H.</h3>
 
@@ -127,25 +128,25 @@
                         </div>
                     </div>
                 </div>
-
+            </div>
                 <div class="row pt-4">
-                    <div class="col">
+                    <div class="col d-none d-lg-block">
                         <div id="qs_vision" class="image-container">
                             <img src="assets/img/carrusel-index/reunion-1.jpeg" class="img-fluid p-1">
                             <img src="assets/img/carrusel-index/reunion-1.jpeg" class="img-fluid p-1">
                             <img src="assets/img/carrusel-index/reunion-1.jpeg" class="img-fluid p-1">
                         </div>
                     </div>
-                    <div class="col-md-8">
-                        <h2><small>Visión</small></h2>
+                    <div class="col-md-12 col-lg-8">
+                        <h2><small><span class="font-weight-bold">Visión</span></small></h2>
                         <p class="lead text-justify">
                             ISO QUALITY es una empresa Consultora que por medio de su trabajo profesional y de mucha
                             vinculación en terreno con sus clientes busca su crecimiento y sustentabilidad como una
                             Consultora de Prestigio en Chile y Latinoamérica.
 
                         </p>
-                        <h2><small>Valores</small></h2>
-                        <h3><small>Servicio Personalizado</small></p>
+                        <h2><small><span class="font-weight-bold">Valores</span></small></h2>
+                        <h3><small><span class="font-style-underline">Servicio Personalizado</span></small></p>
                             <p class="lead text-justify">
                                 Nuestra metodología de trabajo personalizada en la implementación del servicio, hemos
                                 logrado la
@@ -154,17 +155,17 @@
                                 el
                                 mercado.
                             </p>
-                            <h3><small>Compromiso</small></p>
+                            <h3><small><span class="font-style-underline">Compromiso</span></small></p>
                                 <p class="lead text-justify">
                                     Nuestro trabajo concluye con el logro de la certificación o con el logro de los
                                     subsidios
-                                    deseados por nuestros clientes, <span class="font-weight-bold">sólo una vez
+                                    deseados por nuestros clientes, <span class="font-style-italic">sólo una vez
                                         conseguido el objetivo</span>, concluyen
                                     nuestros
                                     servicios.
                                 </p>
 
-                                <h3><small>Carácter eminentemente Técnico</small></p>
+                                <h3><small><span class="font-style-underline">Carácter eminentemente Técnico</span></small></p>
                                     <p class="lead text-justify">
                                         Nuestro grado de especialización técnica en la implementación de Sistemas de
                                         Gestión
@@ -176,7 +177,7 @@
                                         ASR
                                         Certificaciones.
                                     </p>
-                                    <h3><small>Confidencialidad</small></p>
+                                    <h3><small><span class="font-style-underline">Confidencialidad</span></small></p>
                                         <p class="lead text-justify">
                                             En términos de gestión y manejo de la información crítica de nuestros
                                             clientes,
