--- a/frontEnd/ISOQuality/ISOQuality/sercotec.html
+++ b/frontEnd/ISOQuality/ISOQuality/sercotec.html
@@ -137,7 +137,7 @@
       mt-3 text-center">
           Asesoramiento y Acompañamiento en la Obtención de Fondos Públicos
         </h3>
-        <p class="text-center mb-4">
+        <p class="text-justify mb-4">
 
           Asesoramos y acompañamos en el proceso de postulación a micro, pequeñas y medianas empresas que están
           interesadas mediante la Formulación de Proyectos para la obtención de fondos públicos de fomento
@@ -159,7 +159,7 @@
               </h3>
               <button type="button" class="btn btn-primary btn-rounded w-100 mb-3"
                 onclick="window.location.href='contacto.html'">
-                Evaluacion Gratuita
+                Evaluación Gratuita
               </button>
             </div>
             <div class="card-body">
