script jquery, ajustes de carrusel nuevo listo

--- a/frontEnd/ISOQuality/ISOQuality/corfo.html
+++ b/frontEnd/ISOQuality/ISOQuality/corfo.html
@@ -36,7 +36,6 @@
     body {
 
         font-size: 16px;
-        color: #ffffff;
         text-rendering: optimizeLegibility;
         font-weight: initial;
         text-shadow: #000000;
@@ -885,7 +884,7 @@
         </section>
     <!-- Footer -->
     <div class="container-fluid pt-2 px-3">
-        <footer class="text-center bg-transparent text-dark" id="footer">
+        <footer class="text-center bg-transparent" id="footer">
           <div class="text-center pt-3 pb-3">
             <div class="row">
               <div class="col-sm-3 order-first order-md-first">
