--- a/frontEnd/ISOQuality/ISOQuality/index.html
+++ b/frontEnd/ISOQuality/ISOQuality/index.html
@@ -12,6 +12,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
   <link rel="stylesheet" href="assets/style.css">
+   <!-- JQuery -->
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!--   Iconos de footer -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -132,7 +134,7 @@
           </p>
         </div>
         <div class="col-lg-5 col-md-12">
-          <p class="text-justify lead pt-2">ISO Quality se ha dedicado por más de 15 años al desarrollo de
+          <p class="text-justify lead pt-2">ISO Quality se ha dedicado por más de 20 años al desarrollo de
             consultorías en el
             área de la implementación de las normas ISO, especificamente las de calidad, medio ambiente y seguridad.
             Se hacen consultorías y se brinda apoyo para la formulación de proyectos
@@ -140,7 +142,7 @@
           </p>
           <p class="lead text-justify">
             Con nuestra metodología de trabajo personalizada en la implementación del servicio, hemos logrado la
-            diferenciación respecto a la oferta existente y a mantenernos vigentes por más de 15 años en el mercado.
+            diferenciación respecto a la oferta existente y a mantenernos vigentes por más de 20 años en el mercado.
           </p>
         </div>
         <div class="col-lg-7 col-md-12 d-flex align-items-center">
