--- a/frontEnd/ISOQuality/ISOQuality/logrosyclientes.html
+++ b/frontEnd/ISOQuality/ISOQuality/logrosyclientes.html
@@ -12,6 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
     <link rel="stylesheet" href="assets/style.css">
+     <!-- JQuery -->
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!--   Iconos de footer -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
