--- a/frontEnd/ISOQuality/ISOQuality/serviciosycapacitaciones.html
+++ b/frontEnd/ISOQuality/ISOQuality/serviciosycapacitaciones.html
@@ -12,6 +12,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
   <link rel="stylesheet" href="assets/style.css">
+   <!-- JQuery -->
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!--   Iconos de footer -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -295,78 +297,60 @@
       </div>
 
       <h2><small>Talleres</small></h2>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-      <!-- <ol class="carousel-indicators">
-                      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-                      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-                      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-                    </ol> -->
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="assets/img/imagenes/Foto Taller Asociatividad y Gremialismo.jpg" class="d-block w-100"
-            alt="Auditores Internos en normas ISO">
-          <div class="carousel-caption d-none d-md-block">
-            <h3>Talleres</h3>
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <!-- <ol class="carousel-indicators">
+                        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+                        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+                        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+                      </ol> -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/img/imagenes/Foto Taller Asociatividad y Gremialismo.jpg" style="height:450px ;" class="d-md-block w-100"
+              alt="Auditores Internos en normas ISO">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Talleres</h3>
+            </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="#" style="height:450px ;" class="d-md-block w-100"
-            alt="Talleres de Interpretación y Aplicación de las normas ISO">
-          <div class="carousel-caption d-none d-sm-block">
-            <h3>Talleres</h3>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="#" class="d-block w-100"
-            alt="Cultura y Clima organizacional">
-          <div class="carousel-caption d-none d-md-block">
-            <h3>Talleres</h3>
-          </div>
-        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </a>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </a>
     </div>
-    </div>
-
-    
-
-  </div>
   <!-- Footer -->
-  <div class="container-fluid pt-2 px-3">
-    <footer class="text-center bg-transparent" id="footer">
-      <div class="text-center pt-3 pb-3">
-        <div class="row">
-          <div class="col-sm-3 order-first order-md-first">
-            <div class="d-flex align-items-center">
-              <i class="fas fa-envelope me-2"></i>
-              <p class="mb-0 text-sm">clientes@isoquality.cl</p>
+    <div class="container-fluid pt-2 px-3">
+      <footer class="text-center bg-transparent" id="footer">
+        <div class="text-center pt-3 pb-3">
+          <div class="row">
+            <div class="col-sm-3 order-first order-md-first">
+              <div class="d-flex align-items-center">
+                <i class="fas fa-envelope me-2"></i>
+                <p class="mb-0 text-sm">clientes@isoquality.cl</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <i class="fas fa-phone me-2"></i>
+                <p class="mb-0 text-sm">+56 9 9733 3032</p>
+              </div>
             </div>
-            <div class="d-flex align-items-center">
-              <i class="fas fa-phone me-2"></i>
-              <p class="mb-0 text-sm">+56 9 9733 3032</p>
-            </div>
-          </div>
-          <div class="col-sm-9 order-last order-md-last pt-3">
-            <div class="d-flex flex-column flex-md-row justify-content-end align-items-center ">
-              <a class="btn me-2 text-sm text-md text-truncate" href="logrosyclientes.html" role="button">Logros</a>
-              <a class="btn me-2 text-sm text-md text-truncate" href="logrosyclientes.html" role="button">Clientes</a>
-              <a class="btn me-2 text-sm text-md text-truncate" href="quienessomos.html" role="button">Quiénes
-                Somos</a>
-              <a class="btn me-2 text-sm text-md" href="contacto.html" role="button">Contacto</a>
-              <p class="mb-0 text-sm text-md text-truncate">© 2023 ISO Quality</p>
+            <div class="col-sm-9 order-last order-md-last pt-3">
+              <div class="d-flex flex-column flex-md-row justify-content-end align-items-center ">
+                <a class="btn me-2 text-sm text-md text-truncate" href="logrosyclientes.html" role="button">Logros</a>
+                <a class="btn me-2 text-sm text-md text-truncate" href="logrosyclientes.html" role="button">Clientes</a>
+                <a class="btn me-2 text-sm text-md text-truncate" href="quienessomos.html" role="button">Quiénes
+                  Somos</a>
+                <a class="btn me-2 text-sm text-md" href="contacto.html" role="button">Contacto</a>
+                <p class="mb-0 text-sm text-md text-truncate">© 2023 ISO Quality</p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </footer>
-  </div>
+      </footer>
+    </div>
 </div>
   <!-- Scripts de Bootstrap y otros archivos JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
