correciones gramatica y ortografia

--- a/frontEnd/ISOQuality/ISOQuality/corfo.html
+++ b/frontEnd/ISOQuality/ISOQuality/corfo.html
@@ -459,17 +459,17 @@
                             productos (bienes o servicios) y/o procesos, que requieran I+D, desde la
                             fase de prototipo, hasta la fase de validación técnica a escala productiva
                             y/o validación comercial, fortaleciendo las capacidades de innovación en
-                            la empresa..</div>
+                            la empresa.</div>
 
                         <ul class="postcard__tagbox pb-2 align-self-center text-light">
                             <li class="tag__item play blue">
-                                <a href="contacto.html"><i class="fas fa-check-circle mr-4"></i> Solicita tu Evaluacion
+                                <a href="contacto.html"><i class="fas fa-check-circle mr-4"></i> Solicita tu Evaluación
                                     Gratuita</a>
                             </li>
                         </ul>
 
                         <button class="btn btn-outline-primary w-50 mb-0 align-self-center" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal"> Ver mas</button>
+                            data-bs-target="#exampleModal"> Ver más</button>
                         <!-- Modal -->
                         <div class="modal fade text-dark" id="exampleModal" tabindex="-1"
                             aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -542,7 +542,7 @@
                                             <ul class="postcard__tagbox justify-content-center text-light">
                                                 <li class="tag__item play blue">
                                                     <a href="contacto.html"><i class="fas fa-check-circle mr-2"></i>
-                                                        Solicita tu Evaluacion
+                                                        Solicita tu Evaluación
                                                         Gratuita</a>
                                                 </li>
                                             </ul>
@@ -578,12 +578,12 @@
                         <br>
                         <ul class="postcard__tagbox pb-2 align-self-center text-light">
                             <li class="tag__item play blue">
-                                <a href="contacto.html"><i class="fas fa-check-circle mr-2"></i> Solicita tu Evaluacion
+                                <a href="contacto.html"><i class="fas fa-check-circle mr-2"></i> Solicita tu Evaluación
                                     Gratuita</a>
                             </li>
                         </ul>
                         <button class="btn btn-outline-danger w-50 mb-0 align-self-center" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal2"> Ver mas</button>
+                            data-bs-target="#exampleModal2"> Ver más</button>
                         <!-- Modal -->
                         <div class="modal fade text-dark" id="exampleModal2" tabindex="-1"
                             aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -638,7 +638,7 @@
                                             <ul class="postcard__tagbox justify-content-center text-light">
                                                 <li class="tag__item play blue">
                                                     <a href="contacto.html"><i class="fas fa-check-circle mr-2"></i>
-                                                        Solicita tu Evaluacion
+                                                        Solicita tu Evaluación
                                                         Gratuita</a>
                                                 </li>
                                             </ul>
@@ -680,12 +680,12 @@
                         <br>
                         <ul class="postcard__tagbox text-light pb-2 align-self-center">
                             <li class="tag__item play blue">
-                                <a href="contacto.html"><i class="fas fa-check-circle mr-2"></i> Solicita tu Evaluacion
+                                <a href="contacto.html"><i class="fas fa-check-circle mr-2"></i> Solicita tu Evaluación
                                     Gratuita</a>
                             </li>
                         </ul>
                         <button class="btn btn-outline-success w-50 mb-0 align-self-center" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal3"> Ver mas</button>
+                            data-bs-target="#exampleModal3"> Ver más</button>
                         <!-- Modal -->
                         <div class="modal fade text-dark" id="exampleModal3" tabindex="-1"
                             aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -747,7 +747,7 @@
                                             <ul class="postcard__tagbox justify-content-center text-light">
                                                 <li class="tag__item play blue">
                                                     <a href="contacto.html"><i class="fas fa-check-circle mr-2"></i>
-                                                        Solicita tu Evaluacion
+                                                        Solicita tu Evaluación
                                                         Gratuita</a>
                                                 </li>
                                             </ul>
@@ -787,12 +787,12 @@
                         <br>
                         <ul class="postcard__tagbox pb-2 align-self-center text-light">
                             <li class="tag__item play blue">
-                                <a href="contacto.html"><i class="fas fa-check-circle mr-2"></i> Solicita tu Evaluacion
+                                <a href="contacto.html"><i class="fas fa-check-circle mr-2"></i> Solicita tu Evaluación
                                     Gratuita</a>
                             </li>
                         </ul>
                         <button class="btn btn-outline-warning w-50 mb-0 align-self-center" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal4"> Ver mas</button>
+                            data-bs-target="#exampleModal4"> Ver más</button>
                         <!-- Modal -->
                         <div class="modal fade text-dark" id="exampleModal4" tabindex="-1"
                             aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -862,7 +862,7 @@
                                             <ul class="postcard__tagbox justify-content-center text-light ">
                                                 <li class="tag__item play blue">
                                                     <a href="contacto.html"><i class="fas fa-check-circle mr-2"></i>
-                                                        Solicita tu Evaluacion
+                                                        Solicita tu Evaluación
                                                         Gratuita</a>
                                                 </li>
                                             </ul>
