--- a/frontEnd/ISOQuality/ISOQuality/logrosyclientes.html
+++ b/frontEnd/ISOQuality/ISOQuality/logrosyclientes.html
@@ -94,7 +94,7 @@
                 <div class="col-lg-6">
                     <div class="rectangle px-1" id="logros-1">
                         <h4 class="font-weight-bold"><small>+200 proyectos ganados</small></h4>
-                        <p class="lead">Incluidas las convocatorias a postulacion de fondos SERCOTEC y CORFO</p>
+                        <p class="lead">Incluidas las convocatorias a postulación de fondos SERCOTEC y CORFO</p>
                         <p>SERCOTEC Semilla, Abeja, Crece.
                             <br>
                             CORFO Semilla Inicia, Semilla Expande, Consolida y Expande, Crea y Valida.
@@ -104,7 +104,7 @@
                         <div class="col-sm-6">
                             <div class="square px-1" id="logros-2">
                                 <h4 class="font-weight-bold"><small>+ 20 años</small></h4>
-                                <p class="lead">de experiencia en el area.<br> Se ha trabajado con más de 15 rubros
+                                <p class="lead">de experiencia en el área.<br> Se ha trabajado con más de 15 rubros
                                     empresariales.</p>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                         <div class="col-12">
                             <div class="rectangle px-1" id="logros-4">
                                 <h4 class="font-weight-bold"><small>100% de eficacia</small></h4>
-                                <p class="lead">Todos los Procesos de Certificacion presentados por ISO Quality han sido
+                                <p class="lead">Todos los Procesos de Certificación presentados por ISO Quality han sido
                                     exitosos.</p>
                             </div>
                         </div>
@@ -135,7 +135,7 @@
                         </div>
                         <div class="col-12">
                             <div class="rectangle px-1" id="logros-6">
-                                <h4 class="font-weight-bold"><small>+1000 Auditorias Internas realizadas</small></h4>
+                                <h4 class="font-weight-bold"><small>+1000 Auditorías Internas realizadas</small></h4>
                                 <p class="lead">Nuestro equipo se encargará de brindar un servicio transparente y
                                     eficaz.</p>
                             </div>
@@ -370,7 +370,7 @@
                         <ul>
                             <li>Agencia de Aduanas I.P. Hardy y Cía. Ltda.</li>
                             <li>Agencia de Aduanas Pamela Ortega Miño</li>
-                            <li>Agencia de Aduaans AMS</li>
+                            <li>Agencia de Aduanas AMS</li>
                             <li>OceanQuímica S.A.</li>
                             <li>Valparaíso Ship Service S.A.</li>
                             <li>ASIMAR S.A.</li>
@@ -515,7 +515,7 @@
                             <li>Universidad de Valparaíso</li>
                             <li>CFT Universidad de Valparaíso</li>
                             <li>Escuela de Conductores El Conquistador Ltda.</li>
-                            <li>CAMCAP, Centro de Capacitacion y Desarrollo de la Cámara Aduanera de Chile Ltda.</li>
+                            <li>CAMCAP, Centro de Capacitación y Desarrollo de la Cámara Aduanera de Chile Ltda.</li>
                             <li>Academia de Seguridad Tactical Partners</li>
                         </ul>
                         </p>
