--- a/frontEnd/ISOQuality/ISOQuality/menuIso.html
+++ b/frontEnd/ISOQuality/ISOQuality/menuIso.html
@@ -102,7 +102,7 @@
                 <br>
                 <br>
                 <div class="col text-center">
-                    <a type="button" class="btn btn-primary btn-lg btn-block" href="contacto.html">Evaluacion
+                    <a type="button" class="btn btn-primary btn-lg btn-block" href="contacto.html">Evaluación
                         Gratuita</a>
                 </div>
                 <br>
@@ -122,8 +122,8 @@
                 </figure>
                 <div class="contenido-card">
                     <h3>ISO 9001:2015</h3>
-                    <p>La norma Internacional ISO 9001 está enfocada a la consecución de la calidad en una
-                        organización
+                    <p>La Norma Internacional ISO 9001 está enfocada a la consecución de la calidad en una
+                        organización.
 
                 </div>
             </div>
@@ -147,7 +147,7 @@
 
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Volver</button>
-                            <a type="button" class="btn btn-primary" href="contacto.html">Evaluacion Gratuita</a>
+                            <a type="button" class="btn btn-primary" href="contacto.html">Evaluación Gratuita</a>
                         </div>
                     </div>
                 </div>
@@ -162,9 +162,9 @@
                 </figure>
                 <div class="contenido-card">
                     <h3>ISO 14001:2015</h3>
-                    <p>La norma Internacional ISO 14001 establece herramientas y sistemas enfocados a los procesos
+                    <p>La Norma Internacional ISO 14001 establece herramientas y sistemas enfocados a los procesos
                         de producción al interior de una empresa
-                        u organización, y de los efectos o externalidades que de estos deriven al medio ambiente</p>
+                        u organización, y de los efectos o externalidades que de estos deriven al medio ambiente.</p>
                 </div>
             </div>
 
@@ -185,7 +185,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Volver</button>
-                            <a type="button" class="btn btn-primary" href="contacto.html">Evaluacion
+                            <a type="button" class="btn btn-primary" href="contacto.html">Evaluación
                                 Gratuita</a>
                         </div>
                     </div>
@@ -202,10 +202,10 @@
                 </figure>
                 <div class="contenido-card">
                     <h3>ISO 45001:2018</h3>
-                    <p>La norma Internacional ISO 45001 (ex ISO 18001) es la nueva norma internacional para la gestión
+                    <p>La Norma Internacional ISO 45001 (ex ISO 18001) es la nueva norma internacional para la gestión
                         de la seguridad y Salud en el trabajo (SG-SST)
                         es la encargada de la gestión de los riesgos y oportunidades en la prevención de las lesiones y
-                        los problemas de salud en el trabajo</p>
+                        los problemas de salud en el trabajo.</p>
 
                 </div>
             </div>
@@ -226,7 +226,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Volver</button>
-                            <a type="button" class="btn btn-primary" href="contacto.html">Evaluacion
+                            <a type="button" class="btn btn-primary" href="contacto.html">Evaluación
                                 Gratuita</a>
                         </div>
                     </div>
@@ -267,7 +267,7 @@
 
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Volver</button>
-                            <a type="button" class="btn btn-primary" href="contacto.html">Evaluacion Gratuita</a>
+                            <a type="button" class="btn btn-primary" href="contacto.html">Evaluación Gratuita</a>
                         </div>
                     </div>
                 </div>
@@ -310,7 +310,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Volver</button>
-                            <a type="button" class="btn btn-primary" href="contacto.html">Evaluacion
+                            <a type="button" class="btn btn-primary" href="contacto.html">Evaluación
                                 Gratuita</a>
                         </div>
                     </div>
@@ -351,7 +351,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Volver</button>
-                            <a type="button" class="btn btn-primary" href="contacto.html">Evaluacion
+                            <a type="button" class="btn btn-primary" href="contacto.html">Evaluación
                                 Gratuita</a>
                         </div>
                     </div>
@@ -361,7 +361,7 @@
         <br>
         
         <div class="col text-center">
-            <a type="button" class="btn btn-primary" href="contacto.html">Evaluacion
+            <a type="button" class="btn btn-primary" href="contacto.html">Evaluación
                 Gratuita</a>
         </div>
 
