--- a/frontEnd/ISOQuality/ISOQuality/quienessomos.html
+++ b/frontEnd/ISOQuality/ISOQuality/quienessomos.html
@@ -97,12 +97,12 @@
                     <h2><small><span class="font-weight-bold">Misión</span></small></h2>
                     <p class="lead text-justify">
                         ISO QUALITY es una empresa dedicada por más de 20 años al desarrollo de consultorías en el área
-                        de la implementación de normas de calidad, medio ambiente y seguridad y a la formulación de
+                        de la implementación de normas de calidad, medio ambiente y seguridad, y a la formulación de
                         proyectos para los diferentes programas de fomento productivo existentes en el país.
 
-                        El trabajo de consultoría es ejecutado bajo una estrecha vinculación con el cliente, de manera
-                        de conocer la realidad de su organización y poder estructurar y mejorar las brechas detectadas
-                        en su negocio con el objetivo final que logren un crecimiento ordenado en términos productivos,
+                        El trabajo de consultoría es ejecutado bajo una estrecha vinculación con el cliente de manera
+                        de conocer la realidad de su organización. Esto permite estructurar y mejorar las brechas detectadas
+                        en su negocio con el objetivo final de lograr un crecimiento ordenado en términos productivos,
                         operativos, administrativos y de gestión.
 
 
@@ -141,17 +141,17 @@
                     <div class="col-md-12 col-lg-8">
                         <h2><small><span class="font-weight-bold">Visión</span></small></h2>
                         <p class="lead text-justify">
-                            ISO QUALITY es una empresa Consultora que por medio de su trabajo profesional y de mucha
-                            vinculación en terreno con sus clientes busca su crecimiento y sustentabilidad como una
+                            ISO QUALITY es una empresa Consultora que, por medio de su trabajo profesional y de mucha
+                            vinculación en terreno con sus clientes, busca su crecimiento y sustentabilidad como una
                             Consultora de Prestigio en Chile y Latinoamérica.
 
                         </p>
                         <h2><small><span class="font-weight-bold">Valores</span></small></h2>
                         <h3><small><span class="font-style-underline">Servicio Personalizado</span></small></p>
                             <p class="lead text-justify">
-                                Nuestra metodología de trabajo personalizada en la implementación del servicio, hemos
+                                Nuestra metodología de trabajo personalizada en la implementación del servicio. Hemos
                                 logrado la
-                                diferenciación respecto a la oferta existente y a mantenernos vigente por más de 20 años
+                                diferenciación respecto a la oferta existente y a mantenernos vigentes por más de 20 años
                                 en
                                 el
                                 mercado.
@@ -171,7 +171,7 @@
                                         Nuestro grado de especialización técnica en la implementación de Sistemas de
                                         Gestión
                                         de Calidad,
-                                        Medio Ambiente y Seguridad y Salud en el Trabajo ha logrado certificar con
+                                        Medio Ambiente y Seguridad y Salud en el trabajo ha logrado certificar con
                                         diferentes Empresas
                                         Certificadoras, tales como Bureau Veritas, Aenor, SGS, Applus, SCI
                                         Certificaciones y
