--- a/frontEnd/ISOQuality/ISOQuality/sercotec.html
+++ b/frontEnd/ISOQuality/ISOQuality/sercotec.html
@@ -193,7 +193,7 @@
               </h3>
               <button type="button" class="btn btn-warning btn-rounded w-100 mb-3"
                 onclick="window.location.href='contacto.html'">
-                Evaluacion Gratuita
+                Evaluación Gratuita
               </button>
             </div>
             <div class="card-body">
@@ -226,14 +226,14 @@
               </h3>
               <button type="button" class="btn btn-success btn-rounded w-100 mb-3"
                 onclick="window.location.href='contacto.html'">
-                Evaluacion Gratuita
+                Evaluación Gratuita
               </button>
             </div>
             <div class="card-body">
               <ol class="list-unstyled mb-0">
                 <li class="mb-3">
                   <i class="fas fa-info-circle text-success me-3"></i>Busca fortalecer la
-                  gestión de las micro y pequeñas empresas y cooperativas
+                  gestión de las micro y pequeñas empresas y cooperativas.
                 </li>
                 <li class="mb-3">
                   <i class="fas fa-info-circle text-success me-3"></i>Entrega un subsidio de $5.000.000, no
@@ -259,7 +259,7 @@
               </h3>
               <button type="button" class="btn btn-secondary btn-rounded w-100 mb-3"
                 onclick="window.location.href='contacto.html'">
-                Evaluacion Gratuita
+                Evaluación Gratuita
               </button>
             </div>
             <div class="card-body">
@@ -267,12 +267,12 @@
                 <li class="mb-3">
                   <i class="fas fa-info-circle text-secondary me-3"></i>Apoya el fortalecimiento de organizaciones
                   representativas de micro y pequeñas
-                  empresas
+                  empresas.
                 </li>
                 <li class="mb-3">
                   <i class="fas fa-info-circle text-secondary me-3"></i>Un subsidio no reembolsable de hasta $10
                   millones
-                  para la implementación de un proyecto
+                  para la implementación de un proyecto.
                 </li>
                 <li class="mb-3">
                   <i class="fas fa-info-circle text-secondary me-3"></i>Emprendedores y emprendedoras
