--- a/frontEnd/ISOQuality/ISOQuality/serviciosycapacitaciones.html
+++ b/frontEnd/ISOQuality/ISOQuality/serviciosycapacitaciones.html
@@ -289,10 +289,10 @@
             <li>Herramientas de Gestión para Pymes</li>
           </ul>
         </div>
-        <p class="service-container lead text-justify">Acompañamos las capacitaciones solicitadas con todo los
+        <p class="service-container lead text-justify">Acompañamos las capacitaciones solicitadas, con todo los
           complementos que
           requiera
-          el cliente, salones, coffee break, almuerzos, material impreso, merchandising,
+          el cliente; salones, coffee break, almuerzos, material impreso, merchandising,
           demostraciones, dinámicas grupales, coaching.</p>
       </div>
 
